Rollback of Java 21 features.